fix: Display username if different from email

--- a/templates/email/users/reset_password_email.html.twig
+++ b/templates/email/users/reset_password_email.html.twig
@@ -38,10 +38,21 @@
                     <td>
                         <p>{% trans %}as.a.reminder.here.are.your.credentials{% endtrans %}</p>
                         <table class="invoice-items" cellpadding="0" cellspacing="0">
-                            <tr>
-                                <td>{% trans %}email{% endtrans %}</td>
-                                <td class="alignright">{{ user.email|escape }}</td>
-                            </tr>
+                            {% if user.email == user.userIdentifier %}
+                                <tr>
+                                    <td>{% trans %}email{% endtrans %}</td>
+                                    <td class="alignright">{{ user.email|escape }}</td>
+                                </tr>
+                            {% else %}
+                                <tr>
+                                    <td>{% trans %}username{% endtrans %}</td>
+                                    <td class="alignright">{{ user.userIdentifier|escape }}</td>
+                                </tr>
+                                <tr>
+                                    <td>{% trans %}email{% endtrans %}</td>
+                                    <td class="alignright">{{ user.email|escape }}</td>
+                                </tr>
+                            {% endif %}
                         </table>
                     </td>
                 </tr>
