--- a/templates/email/users/reset_password_email.txt.twig
+++ b/templates/email/users/reset_password_email.txt.twig
@@ -17,6 +17,10 @@
 
 {% trans %}as.a.reminder.here.are.your.credentials{% endtrans %}
 
-{% trans %}email{% endtrans %}:
-{{ user.email }}
+{% if user.email == user.userIdentifier %}
+{% trans %}email{% endtrans %}: {{ user.email }}
+{% else %}
+{% trans %}username{% endtrans %}: {{ user.userIdentifier }}
+{% trans %}email{% endtrans %}: {{ user.email }}
+{% endif %}
 {% endblock %}
