feat: Added users metadata and localized email links

--- a/templates/email/users/reset_password_email.html.twig
+++ b/templates/email/users/reset_password_email.html.twig
@@ -25,7 +25,7 @@
                     <td>
                         <p>{% trans %}you.need.to.choose.a.new.password.using.following.link{% endtrans %}</p>
                         <p class="aligncenter" itemprop="handler" itemscope itemtype="http://schema.org/HttpActionHandler">
-                            <a class="btn-primary" href="{{ resetLink|raw }}" itemprop="url">{% trans %}reset_your_password{% endtrans %}</a>
+                            <a class="btn-primary" href="{{ resetLink|escape('html_attr') }}" itemprop="url">{% trans %}reset_your_password{% endtrans %}</a>
                         </p>
                         {% block content_disclaimer %}
                             <p>
